# goose

./: .gitignore  2026-06-28-122345-can-you-verify-that-codex-did-m7-and-m8-properly.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  HUMAN_CHANGELOG.md  README.md  claude_plan.md  codex_plan.md  honk300_plan.md  honk300_planning.txt  rust-toolchain.toml  thrum5.txt
.github/workflows/: ci.yml
.tasks/: TASKS.md
.tasks/tasks/: m16r.md  m17r.md  m18r.md
Assets/Images/Memes/custom/: prompts.md
Assets/Images/Memes/originals/: SCREENING.md
Assets/Text/NotepadMessages/custom/: custom-am-goose.txt  custom-good-work.txt  custom-gooseASCII1.txt  custom-hard-to-type.txt  custom-i-cause-problems.txt  custom-peace-was-never.txt
DESKTOP-GOOSE/Desktop Goose for Mac v0.22/__MACOSX/Desktop Goose.app/Contents/Resources/: ._DesktopGoose.sdef
DESKTOP-GOOSE/DesktopGoose v0.31/: Autumn.txt  Read me! Honk.txt
DESKTOP-GOOSE/DesktopGoose v0.31/FOR MOD-MAKERS/: What is this.txt
crates/honk-config/: Cargo.toml
crates/honk-config-tui/: Cargo.toml
crates/honk-config-tui/src/: lib.rs
crates/honk-config-tui/src/app/: action.rs  mod.rs  state.rs
crates/honk-config-tui/src/terminal/: mod.rs
crates/honk-config-tui/src/ui/: mod.rs
crates/honk-config/src/: lib.rs
crates/honk-control/: Cargo.toml
crates/honk-control/src/: lib.rs  platform.rs  protocol.rs
crates/honk-engine/: Cargo.toml
crates/honk-engine/src/: autumn.rs  collect_window.rs  command.rs  cursor.rs  entity.rs  feet.rs  footmarks.rs  foreign_window.rs  hearts.rs  interaction.rs  lib.rs  locomotion.rs  math.rs  mood.rs  render.rs  rig.rs  rng.rs  schedule.rs  sound.rs  task.rs  time.rs  world.rs
crates/honk-engine/tests/: golden.rs
crates/honk-platform-linux/: Cargo.toml
crates/honk-platform-linux/src/: lib.rs
crates/honk-platform-macos/: Cargo.toml
crates/honk-platform-macos/src/: lib.rs
crates/honk-platform-windows/: Cargo.toml
crates/honk-platform-windows/src/: lib.rs
docs/adr/: 0001-m7-cursor-mischief-renderer-and-platform-guardrails.md  0002-m8-foreign-window-watch-and-ride.md  0003-m9-collect-window-assets-and-no-donate.md  0004-m10-cli-tui-control-plane-and-terminal-protection.md  0005-m11-cli-grammar-and-poke-outcome-round-trip.md  0006-m12-config-tui-and-capability-preference-boundary.md  0007-m13-moods-and-local-time-injection.md  0008-m14-schedule-presence-and-autumn.md  0009-m15-multi-monitor-and-appearance.md  0010-m16-macos-backend-agent-bundle-and-tui-status.md  0011-m17-m18-linux-control-runtime-and-degraded-wayland.md  0012-m16-1-m18-1-ci-proven-backend-readiness.md  README.md
docs/readiness/: m16-m18-readiness.md
docs/thinking/: 2026-06-27-m9-collect-window-plan.md
script/: package_macos_app.sh  smoke_m16_macos.sh  smoke_m16_macos_accessibility.sh  smoke_m17_m18_linux.sh
src/: assets.rs  audio.rs  cli.rs  main.rs
src/control/: mod.rs  platform.rs  protocol.rs
src/runtime/: linux.rs  macos.rs  mod.rs  windows.rs
