[package]
name = "honk-platform-linux"
version = "0.0.0"
description = "Linux platform helpers for honk300"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
honk-engine = { path = "../honk-engine" }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
smithay-client-toolkit = { version = "0.20.0", default-features = false, features = ["calloop"] }
wayland-client = "0.31.11"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
x11rb = { version = "0.13.2", features = ["shape", "xfixes", "xinerama", "randr", "render"] }
