[package]
name = "honk-platform-macos"
version = "0.0.0"
description = "macOS AppKit/CoreGraphics overlay backend for honk300"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
honk-engine = { path = "../honk-engine" }
tiny-skia.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
dispatch2 = "0.3.1"
libc = "0.2"
objc2 = "0.6.4"
objc2-application-services = { version = "0.3.2", default-features = false, features = [
    "std",
    "AXAttributeConstants",
    "AXError",
    "AXUIElement",
    "AXValue",
    "HIServices",
    "libc",
] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "libc",
    "std",
    "NSApplication",
    "NSBitmapImageRep",
    "NSColor",
    "NSControl",
    "NSEvent",
    "NSGraphics",
    "NSImage",
    "NSImageRep",
    "NSImageView",
    "NSResponder",
    "NSTextField",
    "NSRunningApplication",
    "NSView",
    "NSWindow",
] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "CFBase",
    "CFCGTypes",
    "CFNumber",
    "CFString",
] }
objc2-core-graphics = { version = "0.3.2", default-features = false, features = [
    "std",
    "CGDirectDisplay",
    "CGError",
    "CGEventSource",
    "CGEventTypes",
    "CGGeometry",
    "CGRemoteOperation",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSDate",
    "NSGeometry",
    "NSObjCRuntime",
    "NSRunLoop",
    "NSString",
] }
